Adjusted integrations params